[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "endless-prototype"
version = "0.1.0"
dependencies = [
    'aiomqtt',
]




# from setuptools import setup
# 
# setup(
#     name='endless-proto',
#     version='0.1.2',
#     description='A prototype target application from the ENDLESS project',
# 
#     # long_description='blah',
#     # long_description_content_type='text/markdown',
# 
#     url='https://github.com/jfasch/FH-ENDLESS',
#     author='Jörg Faschingbauer',
# 
#     # https://pypi.org/classifiers/
#     classifiers=[
#         #   3 - Alpha
#         #   4 - Beta
#         #   5 - Production/Stable
#         'Development Status :: 5 - Production/Stable',
#         # 'Intended Audience :: Developers',
#         # 'Topic :: Software Development :: Build Tools',
#         # 'License :: OSI Approved :: MIT License',
#         'Programming Language :: Python :: 3',
#         'Programming Language :: Python :: 3.6',
#         'Programming Language :: Python :: 3.7',
#         'Programming Language :: Python :: 3.8',
#         'Programming Language :: Python :: 3.9',
#         'Programming Language :: Python :: 3 :: Only',
#     ],
# 
#     package_dir = {'': 'src'},
#     packages = [
#         '',
#         'endless.framework',
#         'endless.project_1',
#     ],
#     python_requires='>=3.6, <4',
#     install_requires=[
#         'aiomqtt',
#     ],
# )
