[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "endless-prototype"
version = "0.1.0"
dependencies = [
    'aiomqtt',
]

[project.scripts]
run-components = "endless.framework.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

# data files (see 


[tool.setuptools.package-data]
"endless.conf" = ["*.conf"]
"endless.conf.framework" = ["*.conf"]
"endless.conf.project_1" = ["*.conf"]
